--- a/main.css
+++ b/main.css
@@ -130,3 +130,18 @@ body {margin: 0;}
   background-color: #555;
   color: white;
 }
+
+.button {
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  width: 100%;
+  background-color: cadetblue;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 5px 0px;
+}
+
+.button:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
+}
