--- a/main.css
+++ b/main.css
@@ -70,10 +70,10 @@ body {margin: 0;}
   color: white;
 }
 
-div.content {
-  margin-left: 25%;
+.content {
+  margin-left: 25.5%;
   padding: 1px 16px;
-  height: 100%;
+  height: 1000px;
 }
 
 @media screen and (max-width: 900px) {
@@ -100,7 +100,5 @@ div.content {
 
 .specialContent {
   text-align: center;
-  margin: 20px;
-  padding: 15px;
   background-color: #a3c2c2
 }
