--- a/main.css
+++ b/main.css
@@ -114,3 +114,19 @@ body {margin: 0;}
   text-align: center;
   background-color: #a3c2c2
 }
+
+.links li {
+  list-style-type: none;
+}
+
+.links a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+.links a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
